--- a/src/components/ipfs/ipfs.component.css
+++ b/src/components/ipfs/ipfs.component.css
@@ -16,15 +16,15 @@
 
 .event-log_container {
     width: 70%;
+    height: 100px;
+    padding: 10px;
     /* margin-left: 10%; */
 }
 
 .event-log-item-container {
-    /* height: 220px; */
-    width: 60%;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     font: 15px Courier;
-    overflow: auto;
+    /* overflow: auto; */
     margin: 10px;
 }
 
@@ -49,16 +49,9 @@
 
 .mint_container {
     display: grid;
+    width: 200px;
 }
 
-.left {
+.assets-view-container {
     float: left;
-    width: 100%;
-    overflow: hidden;
-}
-
-.right {
-    float: right;
-    width: 50%;
-    overflow: hidden;
 }
