--- a/src/components/ipfs/ipfs.component.css
+++ b/src/components/ipfs/ipfs.component.css
@@ -15,9 +15,11 @@
 }
 
 .event-log_container {
-    width: 70%;
+    /* width: 100%; */
     height: 100px;
+    max-height: 100px;
     padding: 10px;
+    overflow: scroll;
     /* margin-left: 10%; */
 }
 
@@ -36,6 +38,7 @@
     background-color: white;
     height: 100vw;
     padding: 10px;
+    display: flex;
 }
 
 .event-logs-header {
@@ -54,4 +57,25 @@
 
 .assets-view-container {
     float: left;
+}
+
+.content-container {
+    margin: 50px;
+}
+
+.sidebar {
+    text-align: center;
+    border-right: 2px rgb(173, 173, 173) solid;
+}
+
+.sidebar-item {
+    padding: 10px;
+}
+
+.account-data-container {
+    display: grid;
+}
+
+.session-info-container {
+    display: grid;
 }
