--- a/src/App.css
+++ b/src/App.css
@@ -4,19 +4,6 @@
   height: 100vw;
 }
 
-.App-header {
-  padding: 5px;
-  background-color: #282c34;
-  flex-direction: column;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  display: flow-root;
-}
-
-.App-header > button {
-  float: right;
-}
-
 .App-body {
   /* margin: 10px; */
   display: grid;
@@ -58,11 +45,20 @@
   display: grid;
 }
 
+.container {
+  background: white;
+  height: 100vw;
+}
 
 .section-title {
-  font-size: 100px;
+  font-size: 3.5em;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.title-container {
+ text-align: center; 
 }
 
 .grid {
   display: grid;
-} 
+}
