--- a/src/components/home/home.component.css
+++ b/src/components/home/home.component.css
@@ -1,26 +1,5 @@
-.container {
-    padding: 10px;
-}
-
-.dot {
-    height: 20px;
-    width: 20px;
-    background-color: rgb(141, 141, 141);
-    border-radius: 50%;
-    display: inline-block;
-}
-
-.active {
-    background-color: green;
-}
-
-.event-log_container {
-    /* width: 100%; */
-    height: 100px;
-    max-height: 100px;
-    padding: 10px;
-    overflow: scroll;
-    /* margin-left: 10%; */
+.menu {
+    padding: 20px;
 }
 
 .event-log-item-container {
@@ -32,13 +11,13 @@
 
 .event-log-item-container > span {
     display: grid;
-}
+} */
 
 .ipfs-container {
     background-color: white;
     height: 100vw;
-    padding: 10px;
-    display: flex;
+    /* padding: 10px; */
+    /* display: flex; */
 }
 
 .event-logs-header {
@@ -82,4 +61,14 @@
 
 .session-info-container > span {
     padding: 10px;
+}
+
+
+.App-header {
+    /* padding: 5px; */
+    background-color: #282c34;
+    flex-direction: column;
+    font-size: calc(10px + 2vmin);
+    color: white;
+    display: flow-root;
 }
