--- a/src/components/home/home.component.css
+++ b/src/components/home/home.component.css
@@ -1,85 +1,13 @@
-.container {
-    padding: 10px;
+.menu {
+    padding: 20px !important;
+    display: flex !important;
 }
 
-.dot {
-    height: 20px;
-    width: 20px;
-    background-color: rgb(141, 141, 141);
-    border-radius: 50%;
-    display: inline-block;
+.menu-link {
+    text-decoration: none;
+    color: black;
 }
 
-.active {
-    background-color: green;
-}
-
-.event-log_container {
-    /* width: 100%; */
-    height: 100px;
-    max-height: 100px;
-    padding: 10px;
-    overflow: scroll;
-    /* margin-left: 10%; */
-}
-
-.event-log-item-container {
-    /* border: 1px solid #ccc; */
-    font: 15px Courier;
-    /* overflow: auto; */
-    margin: 10px;
-}
-
-.event-log-item-container > span {
-    display: grid;
-}
-
-.ipfs-container {
-    background-color: white;
-    height: 100vw;
-    padding: 10px;
-    display: flex;
-}
-
-.event-logs-header {
-    padding: 10px;
-}
-
-.loader-container {
-    padding: 100px;
-    text-align: center;
-}
-
-.mint_container {
-    display: grid;
-    width: 200px;
-}
-
-.assets-view-container {
-    float: left;
-}
-
-.content-container {
-    margin: 50px;
-}
-
-.sidebar {
-    text-align: center;
-    border-right: 2px rgb(173, 173, 173) solid;
-}
-
-.sidebar-item {
-    padding: 10px;
-}
-
-.account-data-container {
-    display: grid;
-}
-
-.session-info-container {
-    display: grid;
-}
-
-.session-info-container > span {
-    padding: 10px;
+.menu-link:hover {
+    color: wheat;
 }
