--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,6 @@
   color: #61dafb;
 }
 
-.section {
-  display: grid;
-  width: 40%;
-}
-
 .login-component {
   text-align: center;
   display: inline-grid;
@@ -54,7 +49,11 @@
   background: white;
   height: 100vw;
   padding: 40px;
-  margin-top: 5vw;
+}
+
+.section {
+  display: grid;
+  /* width: 50%; */
 }
 
 .section-title {
@@ -64,8 +63,17 @@
 
 .title-container {
  /* text-align: center;  */
+ padding: 20px;
 }
 
 .grid {
   display: grid;
+}
+
+.body {
+  padding: 60px;
+}
+
+.btn-small {
+  max-width: 200px;
 }
